# counters-proto

./: .gitignore  Dockerfile  README.md  notes.txt  pyproject.toml
counters/: __main__.py  bitcoind.py  builder.py  config.py  counterparty.py  store.py
counters/commands/: __init__.py  inscribe.py  read.py  wallet.py
counters/indexer/: indexer.py
counters/server/: app.py
counters/server/static/: index.html
counters_proto/: __init__.py  __main__.py  config.py  counterparty.py  envelope.py
counters_proto/commands/: __init__.py  serve.py
counters_proto/indexer/: __init__.py  indexer.py
counters_proto/server/: app.py  preview.py
counters_proto/server/static/: docs.md  index.html
docs/: build-reference-v2.md
indexer/: README.md  pyproject.toml
indexer/counter_indexer/: __main__.py  indexer.py
indexer/tests/: test_builder.py  test_envelope.py  test_pipeline.py  test_tap.py
tests/: test_bip32_accounts.py  test_bitcoind_auth.py  test_builder.py  test_counterparty.py  test_counterwallet.py  test_electrum1.py  test_electrum2.py  test_envelope.py  test_inscribe_change_address.py  test_pipeline.py  test_reinscribe_mint.py  test_send.py  test_serve_command.py  test_server.py  test_status.py  test_tap.py  test_wallet_restore.py
