[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "counters-proto"
version = "0.1.0"
description = "Counterparty Inscriptions (Bitcoin Counters) — CLI and indexer"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
    "mnemonic>=0.20",
    "ecdsa>=0.18",
]

[project.scripts]
counters-proto = "counters_proto.__main__:main"

[tool.setuptools.packages.find]
include = ["counters_proto*"]

[tool.setuptools.package-data]
"counters_proto.server" = ["static/*"]
"counters_proto" = ["electrum1_words.txt"]
